--- a/01_create.ipynb
+++ b/01_create.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,15 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'config', 'local', 'runoobdb']\n",
-      "'数据库已存在！'\n"
+      "['admin', 'config', 'local']\n"
      ]
     }
    ],
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,23 +88,15 @@
     " \n",
     "myclient = pymongo.MongoClient(\"mongodb://localhost:27017/\")\n",
     "mydb = myclient[\"runoobdb\"]\n",
-    " \n",
+    "\n",
     "mycol = mydb[\"sites\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "集合已存在！\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pymongo\n",
     " \n",
@@ -138,7 +129,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ab49506de734c46ddf3da1d138602e84b63862788478f9f9fc5b5147bbdf6ca9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
