--- a/02_insert.ipynb
+++ b/02_insert.ipynb
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pymongo.results.InsertOneResult object at 0x7f68b82a3ac0>\n"
+      "<pymongo.results.InsertOneResult object at 0x7f47002b46c0>\n"
      ]
     }
    ],
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('642eb6ba231deb00491cd59e')\n"
+      "ObjectId('642ed0ced8598cd0c53ef27b')\n"
      ]
     }
    ],
@@ -73,18 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ObjectId('642eb9fd642641bf4f18f6d5'),\n",
-      " ObjectId('642eb9fd642641bf4f18f6d6'),\n",
-      " ObjectId('642eb9fd642641bf4f18f6d7'),\n",
-      " ObjectId('642eb9fd642641bf4f18f6d8'),\n",
-      " ObjectId('642eb9fd642641bf4f18f6d9')]\n"
+      "[ObjectId('642ed0d2d8598cd0c53ef27d'),\n",
+      " ObjectId('642ed0d2d8598cd0c53ef27e'),\n",
+      " ObjectId('642ed0d2d8598cd0c53ef27f'),\n",
+      " ObjectId('642ed0d2d8598cd0c53ef280'),\n",
+      " ObjectId('642ed0d2d8598cd0c53ef281')]\n"
      ]
     }
    ],
@@ -171,7 +171,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ab49506de734c46ddf3da1d138602e84b63862788478f9f9fc5b5147bbdf6ca9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
