--- a/03_query.ipynb
+++ b/03_query.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('642eb9f2642641bf4f18f6d3'),\n",
+      "{'_id': ObjectId('642ed0ccd8598cd0c53ef279'),\n",
       " 'alexa': '10000',\n",
       " 'name': 'RUNOOB',\n",
       " 'url': 'https://www.runoob.com'}\n"
@@ -33,7 +33,7 @@
     "mycol = mydb[\"sites\"]\n",
     " \n",
     "x = mycol.find_one()\n",
-    " \n",
+    "\n",
     "pprint(x)"
    ]
   },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,14 +68,14 @@
     "myclient = pymongo.MongoClient(\"mongodb://localhost:27017/\")\n",
     "mydb = myclient[\"runoobdb\"]\n",
     "mycol = mydb[\"site2\"]\n",
-    " \n",
+    "\n",
     "for x in mycol.find():\n",
     "  pprint(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ab49506de734c46ddf3da1d138602e84b63862788478f9f9fc5b5147bbdf6ca9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
