--- a/01_create.ipynb
+++ b/01_create.ipynb
@@ -113,7 +113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "norm",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -127,12 +127,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ab49506de734c46ddf3da1d138602e84b63862788478f9f9fc5b5147bbdf6ca9"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
