--- a/00_install.ipynb
+++ b/00_install.ipynb
@@ -43,6 +43,16 @@
     "# 簡易教學\n",
     "# https://www.runoob.com/python3/python-mongodb.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 不錯教學\n",
+    "# https://www.geeksforgeeks.org/python-mongodb-tutorial/"
+   ]
   }
  ],
  "metadata": {
