--- a/note.ipynb
+++ b/note.ipynb
@@ -8,9 +8,12 @@
    "source": [
     "# MongoDB安裝在Ubuntu:\n",
     "# https://www.mongodb.com/docs/v6.0/tutorial/install-mongodb-on-ubuntu/\n",
-    "#     確認安裝: apt list | grep mongo\n",
     "#     啟動: sudo systemctl start mongod\n",
-    "#     確認: sudo systemctl status mongod"
+    "#     確認: sudo systemctl status mongod\n",
+    "#     停止: sudo systemctl stop mongod\n",
+    "\n",
+    "#     設定開機自動啟動: sudo systemctl enable mongod\n",
+    "#     取消開機自動啟動: sudo systemctl disable mongod"
    ]
   },
   {
@@ -41,17 +44,41 @@
    "outputs": [],
    "source": [
     "# 簡易教學\n",
-    "# https://www.runoob.com/python3/python-mongodb.html"
+    "# https://www.runoob.com/python3/python-mongodb.html\n",
+    "\n",
+    "# https://www.w3schools.com/python/python_mongodb_getstarted.asp"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 不錯教學\n",
-    "# https://www.geeksforgeeks.org/python-mongodb-tutorial/"
+    "Important: In MongoDB, a collection is not created until it gets content!\n",
+    "\n",
+    "MongoDB waits until you have inserted a document before it actually creates the collection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "what's cursor\n",
+    "\n",
+    "Cursor class to iterate over Mongo query results.\n",
+    "\n",
+    "類似generator"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_id 是特殊欄位\n",
+    "\n",
+    "If you do not specify an _id field, then MongoDB will add one for you and assign a unique id for each document.\n",
+    "\n",
+    "In the example above no _id field was specified, so MongoDB assigned a unique _id for the record (document)."
    ]
   }
  ],
