--- a/note.ipynb
+++ b/note.ipynb
@@ -50,6 +50,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 重要好文\n",
+    "\n",
+    "# Perform MongoDB Indexing using PyMongo：\n",
+    "# https://www.analyticsvidhya.com/blog/2020/09/mongodb-indexes-pymongo-tutorial/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
