--- a/note.ipynb
+++ b/note.ipynb
@@ -58,7 +58,10 @@
     "# 重要好文\n",
     "\n",
     "# Perform MongoDB Indexing using PyMongo：\n",
-    "# https://www.analyticsvidhya.com/blog/2020/09/mongodb-indexes-pymongo-tutorial/"
+    "# https://www.analyticsvidhya.com/blog/2020/09/mongodb-indexes-pymongo-tutorial/\n",
+    "\n",
+    "# MongoDB explain 實戰— 看看你的 index 是真有在做事，還是佔空間而已\n",
+    "# https://medium.com/starbugs/optimize-index-with-mongodb-explain-2337ef50a601"
    ]
   },
   {
