--- a/note.ipynb
+++ b/note.ipynb
@@ -61,7 +61,10 @@
     "# https://www.analyticsvidhya.com/blog/2020/09/mongodb-indexes-pymongo-tutorial/\n",
     "\n",
     "# MongoDB explain 實戰— 看看你的 index 是真有在做事，還是佔空間而已\n",
-    "# https://medium.com/starbugs/optimize-index-with-mongodb-explain-2337ef50a601"
+    "# https://medium.com/starbugs/optimize-index-with-mongodb-explain-2337ef50a601\n",
+    "\n",
+    "# Avoid duplicate entries in MongoDB?\n",
+    "# https://www.tutorialspoint.com/avoid-duplicate-entries-in-mongodb"
    ]
   },
   {
